Adding and changing elements in a list.

--- a/A_Smarter_Way_to_Learn_Python/Exercises/16_Lists_Adding_and_changing_elements.ipynb
+++ b/A_Smarter_Way_to_Learn_Python/Exercises/16_Lists_Adding_and_changing_elements.ipynb
@@ -91,84 +91,263 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 01."
+    "##### 01. What is the keyword for adding a new element to the end of a list?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 02."
+    "`append`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 03."
+    "##### 02. Using the **append** keyword, add the number 1 to the end of the list nums."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 04."
+    "```python\n",
+    "nums.append(1)\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 05."
+    "##### 03. Using the keyword **append**, add the string \"cat\" to the end of the list pets."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 06."
+    "```python\n",
+    "pets.append(\"cat\")\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 07."
+    "##### 04. Using the keyword **append**, add the string \"sun\" to the end of the list **stars**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 08."
+    "```python\n",
+    "stars.append(\"sun\")\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 09."
+    "##### 05. Code the alternative to the following statement, using the plus sign.\n",
+    "```python\n",
+    "x.append(5)\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 10."
+    "```python\n",
+    "x = x + [5]\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 11."
+    "##### 06. Using the **append** keyword, append a string to a list. Make up the string and list name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite dark type pokemon is Umbreon.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pokemon = [\"Porygon\", \"Incineroar\", \"Gengar\"]\n",
+    "pokemon.append(\"Umbreon\")\n",
+    "print(\"My favorite dark type pokemon is \" + pokemon[3] + \".\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 12."
+    "##### 07. Using the plus sign instead of **append**, add two strings to the end of a list. Make up the list name and strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Porygon', 'Incineroar', 'Gengar', 'Umbreon', 'Greninja', 'Lucario']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pokemon = pokemon + [\"Greninja\", \"Lucario\"]\n",
+    "print(pokemon)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 08. Insert the number 5 at the beginning of a list. Make up the list name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [7, 9]\n",
+    "numbers.insert(0, 5)\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 09. In the following list, insert a string after \"orange\". Make up the string.\n",
+    "```python\n",
+    "fruits = [\"apple\", \"orange\", \"tangerine\", \"banana\"]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'orange', 'strawberry', 'tangerine', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"orange\", \"tangerine\", \"banana\"]\n",
+    "fruits.insert(2, \"strawberry\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 10. Using the plus sign rather than append, add two numbers to the end of a list and assign the result to a second list. Make up the list names and the numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 9, 11, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "more_numbers = numbers + [11, 13]\n",
+    "print(more_numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 11. Fill in the blank to assign the fifth element of the list to the variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fri\n"
+     ]
+    }
+   ],
+   "source": [
+    "weekdays = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\"]\n",
+    "fifth_weekday = weekdays[4]\n",
+    "print(fifth_weekday)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 12. Create a list of three numbers. Then display the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.14, 2.71, 1.61]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [3.14, 2.71, 1.61]\n",
+    "print(numbers)"
    ]
   }
  ],
