--- a/Pandas/Notas/notas.ipynb
+++ b/Pandas/Notas/notas.ipynb
@@ -336,6 +336,434 @@
     "# Si se multiplica una serie por un escalar, se multiplica cada elemento de la serie por el escalar.\n",
     "sales_q1 * 2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📅 2023-11-22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📊 Series: Continuación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ventas del primer y segundo cuarto del año.\n",
+    "q1 = { \"MEX\": 100, \"USA\": 200, \"CAN\": 300, \"CHI\": 400 }\n",
+    "q2 = { \"ARG\": 500, \"USA\": 600, \"CAN\": 700, \"CHI\": 800 }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_q1 = pd.Series(q1)\n",
+    "sales_q2 = pd.Series(q2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MEX    100\n",
+       "USA    200\n",
+       "CAN    300\n",
+       "CHI    400\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MEX    100\n",
+       "USA    200\n",
+       "CAN    300\n",
+       "CHI    400\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill_value = 0: Si no existe un valor en una serie, se reemplaza por 0.\n",
+    "ventas = sales_q1.add(sales_q2, fill_value = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ARG     500.0\n",
+       "CAN    1000.0\n",
+       "CHI    1200.0\n",
+       "MEX     100.0\n",
+       "USA     800.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ventas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CHI    1200.0\n",
+       "CAN    1000.0\n",
+       "USA     800.0\n",
+       "ARG     500.0\n",
+       "MEX     100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ordenar las ventas de mayor a menor.\n",
+    "ventas.sort_values(ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ver el tipo de datos de la serie.\n",
+    "ventas.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🧮 DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[51, 92, 14],\n",
+       "       [71, 60, 20],\n",
+       "       [82, 86, 74],\n",
+       "       [74, 87, 99]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Crear un arreglo matriz de 4x3 con números aleatorios del 0 al 100.\n",
+    "np.random.seed(42)\n",
+    "my_data = np.random.randint(0, 101, (4, 3))\n",
+    "my_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un índice para las filas.\n",
+    "my_index = ['CA', 'NY', 'AZ', 'TX']\n",
+    "# Crear un índice para las columnas.\n",
+    "my_columns = ['Jan', 'Feb', 'Mar']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un DataFrame a partir de un arreglo. Si no se especifican los índices y columnas, se crean índices y columnas numéricos.\n",
+    "df = pd.DataFrame(my_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>51</td>\n",
+       "      <td>92</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>71</td>\n",
+       "      <td>60</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>82</td>\n",
+       "      <td>86</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74</td>\n",
+       "      <td>87</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    0   1   2\n",
+       "0  51  92  14\n",
+       "1  71  60  20\n",
+       "2  82  86  74\n",
+       "3  74  87  99"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un DataFrame a partir de un arreglo con índices y columnas.\n",
+    "df = pd.DataFrame(data = my_data, index = my_index, columns = my_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CA</th>\n",
+       "      <td>51</td>\n",
+       "      <td>92</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NY</th>\n",
+       "      <td>71</td>\n",
+       "      <td>60</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AZ</th>\n",
+       "      <td>82</td>\n",
+       "      <td>86</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TX</th>\n",
+       "      <td>74</td>\n",
+       "      <td>87</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Jan  Feb  Mar\n",
+       "CA   51   92   14\n",
+       "NY   71   60   20\n",
+       "AZ   82   86   74\n",
+       "TX   74   87   99"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 4 entries, CA to TX\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype\n",
+      "---  ------  --------------  -----\n",
+      " 0   Jan     4 non-null      int32\n",
+      " 1   Feb     4 non-null      int32\n",
+      " 2   Mar     4 non-null      int32\n",
+      "dtypes: int32(3)\n",
+      "memory usage: 80.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ver la información del DataFrame.\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
