Explorando métodos para series.

--- a/Pandas/Ejercicios/20231122_19051186_EjPandas_01.ipynb
+++ b/Pandas/Ejercicios/20231122_19051186_EjPandas_01.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Crear una serie que incluya como datos números aleatorios del 1 al 150 y como índices nombre de países, al menos 10 elementos."
+    "##### 1. Crear una serie que incluya como datos números aleatorios del 1 al 150 y como índices nombre de países, al menos 10 elementos."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Crear una serie que incluya como datos números aleatorios y como índices nombre de elementos de tabla periódica, al menos 10 elementos."
+    "##### 2. Crear una serie que incluya como datos números aleatorios y como índices nombre de elementos de tabla periódica, al menos 10 elementos."
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Acceder a cada uno de los elementos de la serie anterior."
+    "##### 3. Acceder a cada uno de los elementos de la serie anterior."
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Multiplicar ambas series x 2.\n"
+    "##### 4. Multiplicar ambas series x 2.\n"
    ]
   },
   {
