--- a/Pandas/Ejercicios/20231123_19051186_EjPandas_02.ipynb
+++ b/Pandas/Ejercicios/20231123_19051186_EjPandas_02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 👨🏽‍💻 Ejercicio Pandas 01"
+    "# 👨🏽‍💻 Ejercicio Pandas 02"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Crear 2 series con 7 elementos cada una, de tal manera que solo 5 elementos sean iguales entre las 2. Hacer la sumatoria de ambas series y mostrar el resultado sin que aparezca «NaN». Ordenar de manera ascendente."
+    "##### 1. Crear 2 series con 7 elementos cada una, de tal manera que solo 5 elementos sean iguales entre las 2. Hacer la sumatoria de ambas series y mostrar el resultado sin que aparezca «NaN». Ordenar de manera ascendente."
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Realizar la sumatoria de ambas series y, en donde no coincidan, sumarle al elemento individual un valor de 100.\n"
+    "##### 2. Realizar la sumatoria de ambas series y, en donde no coincidan, sumarle al elemento individual un valor de 100.\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Verificar el tipo de cada serie y del resultado de la sumatoria."
+    "##### 3. Verificar el tipo de cada serie y del resultado de la sumatoria."
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Crear un dataframe de 4 columnas y 4 renglones de números aleatorios del 1 al 100. Agregar nombres a las columnas y a los índices."
+    "##### 4. Crear un dataframe de 4 columnas y 4 renglones de números aleatorios del 1 al 100. Agregar nombres a las columnas y a los índices."
    ]
   },
   {
