Ejercicios con el método «vectorize», «sort_values», «min», «max», «idx min y max», «value_counts», «unique» y «map».

--- a/Pandas/Ejercicios/20231206_19051186_EjPandas_DataFrame_06.ipynb
+++ b/Pandas/Ejercicios/20231206_19051186_EjPandas_DataFrame_06.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# Dataset con los precios de las acciones de Microsoft desde el 2000 hasta el 2023:\n",
+    "# 'Dataset con los precios de las acciones de Microsoft desde el 2000 hasta el 2023':\n",
     "df = pd.read_csv('c:\\\\Users\\\\Admin\\\\Documents\\\\ITS\\\\Semestre 9\\\\Data_Science\\\\Pandas\\\\Datasets\\\\msft_2000_2023.csv')"
    ]
   },
